HPCC4J-698 Spark should allow reading particular file parts
- Added option to read specific file parts to Spark options
- Added additional logging information on file part read start / stop

Signed-off-by: James McMullan James.McMullan@lexisnexis.com

--- a/spark-hpcc/Examples/PySparkExample.ipynb
+++ b/spark-hpcc/Examples/PySparkExample.ipynb
@@ -116,7 +116,8 @@
     "- **Path**: The file path for the dataset within the HPCC Systems cluster. **Note** Spark-HPCC versions [9.2.110, 9.4.84, 9.6.36, 9.8.10] and above allows for paths to be defined with \"/\" path delimiter instead of the HPCC \"::\" delimiter this fixes URI formatting errors on Databricks.\n",
     "- **limitPerFilePart**: *Optional* Limit on the number of records to be read per file part / partition within the HPCC Systems dataset.\n",
     "- **projectList**: *Optional* The columns that should be read from the HPCC Systems dataset.\n",
-    "- **useTLK** *Optional* Defaults to false, determines whether or not the TLK (Top Level Key) should be used when reading index files. \n"
+    "- **useTLK** *Optional* Defaults to false, determines whether or not the TLK (Top Level Key) should be used when reading index files.\n",
+    "- **fileParts** *Optional* A comma separated list of file part ranges to read\n"
    ]
   },
   {
@@ -134,6 +135,7 @@
     "                         cluster=\"mythor\",\n",
     "                         #path=\"spark::test::dataset\", Old path format not supported on Databricks\n",
     "                         path=\"/spark/test/dataset\",\n",
+    "                         fileParts=\"1-10, 30-40\",\n",
     "                         limitPerFilePart=100,\n",
     "                         projectList=\"key, fill\")"
    ]
