Code review changes

--- a/spark-hpcc/Examples/PySparkExample.ipynb
+++ b/spark-hpcc/Examples/PySparkExample.ipynb
@@ -117,7 +117,7 @@
     "- **limitPerFilePart**: *Optional* Limit on the number of records to be read per file part / partition within the HPCC Systems dataset.\n",
     "- **projectList**: *Optional* The columns that should be read from the HPCC Systems dataset.\n",
     "- **useTLK** *Optional* Defaults to false, determines whether or not the TLK (Top Level Key) should be used when reading index files.\n",
-    "- **fileParts** *Optional* A comma separated list of file part ranges to read\n"
+    "- **fileParts** *Optional* List of file parts to read; supports a comma-separated list of files, file part ranges, or a combination of both.\n"
    ]
   },
   {
@@ -135,7 +135,7 @@
     "                         cluster=\"mythor\",\n",
     "                         #path=\"spark::test::dataset\", Old path format not supported on Databricks\n",
     "                         path=\"/spark/test/dataset\",\n",
-    "                         fileParts=\"1-10, 30-40\",\n",
+    "                         fileParts=\"1,2,3, 5-10, 30-40\",\n",
     "                         limitPerFilePart=100,\n",
     "                         projectList=\"key, fill\")"
    ]
