--- a/spark-hpcc/Examples/PySparkExample.ipynb
+++ b/spark-hpcc/Examples/PySparkExample.ipynb
@@ -115,6 +115,8 @@
     "- **Cluster**: The name of the underlying Thor cluster storage plane, this will change based on the target HPCC Systems cluster configuration, but will default to \"mythor\" on bare-metal and \"data\" on containerized systems.\n",
     "- **Path**: The file path for the dataset within the HPCC Systems cluster. **Note** Spark-HPCC versions [9.2.110, 9.4.84, 9.6.36, 9.8.10] and above allows for paths to be defined with \"/\" path delimiter instead of the HPCC \"::\" delimiter this fixes URI formatting errors on Databricks.\n",
     "- **limitPerFilePart**: *Optional* Limit on the number of records to be read per file part / partition within the HPCC Systems dataset.\n",
+    "- **recordSamplingRate**: *Optional* The percentage of records to sample from the dataset. Range: [1e-12,1.0]\n",
+    "- **recordSamplingSeed**: *Optional* The seed that controls the random generation used for sampling. The same seed against the same HPCC cluster and HPCC platform version should result in the same sampling.\n",
     "- **projectList**: *Optional* The columns that should be read from the HPCC Systems dataset.\n",
     "- **useTLK** *Optional* Defaults to false, determines whether or not the TLK (Top Level Key) should be used when reading index files.\n",
     "- **fileParts** *Optional* List of file parts to read; supports a comma-separated list of files, file part ranges, or a combination of both.\n"
@@ -136,6 +138,8 @@
     "                         #path=\"spark::test::dataset\", Old path format not supported on Databricks\n",
     "                         path=\"/spark/test/dataset\",\n",
     "                         fileParts=\"1,2,3, 5-10, 30-40\",\n",
+    "                         recordSamplingRate=0.1,\n",
+    "                         recordSamplingSeed=42,\n",
     "                         limitPerFilePart=100,\n",
     "                         projectList=\"key, fill\")"
    ]
