HPCC4J-735 Allow string trimming
- Exposed string processing flags to Spark
- Added information on string processing to Spark example notebook / documentation
- Created a test for string processing

Signed-off-by: James McMullan James.McMullan@lexisnexis.com

--- a/spark-hpcc/Examples/PySparkExample.ipynb
+++ b/spark-hpcc/Examples/PySparkExample.ipynb
@@ -119,7 +119,8 @@
     "- **recordSamplingSeed**: *Optional* The seed that controls the random generation used for sampling. The same seed against the same HPCC cluster and HPCC platform version should result in the same sampling.\n",
     "- **projectList**: *Optional* The columns that should be read from the HPCC Systems dataset.\n",
     "- **useTLK** *Optional* Defaults to false, determines whether or not the TLK (Top Level Key) should be used when reading index files.\n",
-    "- **fileParts** *Optional* List of file parts to read; supports a comma-separated list of files, file part ranges, or a combination of both.\n"
+    "- **fileParts** *Optional* List of file parts to read; supports a comma-separated list of files, file part ranges, or a combination of both.\n",
+    "- **stringProcessing** *Optional* Comma separated list of processing rules to apply to strings available rules: [NONE, TRIM, TRIM_FIXED, EMPTY_TO_NULL]. Default behavior is NONE. TRIM will apply left and right trim all strings, TRIM_FIXED will apply left trim and right trim for only fixed length strings, and EMPTY_TO_NULL will convert empty strings to a null value.\n"
    ]
   },
   {
@@ -141,7 +142,9 @@
     "                         recordSamplingRate=0.1,\n",
     "                         recordSamplingSeed=42,\n",
     "                         limitPerFilePart=100,\n",
-    "                         projectList=\"key, fill\")"
+    "                         projectList=\"key, fill\",\n",
+    "                         stringProcessing=\"TRIM, EMPTY_TO_NULL\",\n",
+    "                         )"
    ]
   },
   {
