--- a/spark-hpcc/Examples/PySparkExample.ipynb
+++ b/spark-hpcc/Examples/PySparkExample.ipynb
@@ -116,7 +116,11 @@
     "- **Path**: The file path for the dataset within the HPCC Systems cluster. **Note** Spark-HPCC versions [9.2.110, 9.4.84, 9.6.36, 9.8.10] and above allows for paths to be defined with \"/\" path delimiter instead of the HPCC \"::\" delimiter this fixes URI formatting errors on Databricks.\n",
     "- **limitPerFilePart**: *Optional* Limit on the number of records to be read per file part / partition within the HPCC Systems dataset.\n",
     "- **projectList**: *Optional* The columns that should be read from the HPCC Systems dataset.\n",
-    "- **useTLK** *Optional* Defaults to false, determines whether or not the TLK (Top Level Key) should be used when reading index files. \n"
+    "- **useTLK** *Optional* Defaults to false, determines whether or not the TLK (Top Level Key) should be used when reading index files.\n",
+    "\n",
+    "---\n",
+    "## Troubleshooting:\n",
+    "- **Empty dataset**: This typically indicates that an error occured on one or more of the worker nodes during the read process, the worker logs should contain more information about the particular failure.\n"
    ]
   },
   {
