--- a/spark-hpcc/Examples/PySparkExample.ipynb
+++ b/spark-hpcc/Examples/PySparkExample.ipynb
@@ -119,7 +119,7 @@
     "- **recordSamplingSeed**: *Optional* The seed that controls the random generation used for sampling. The same seed against the same HPCC cluster and HPCC platform version should result in the same sampling.\n",
     "- **projectList**: *Optional* The columns that should be read from the HPCC Systems dataset.\n",
     "- **useTLK** *Optional* Defaults to false, determines whether or not the TLK (Top Level Key) should be used when reading index files.\n",
-    "- **fileParts** *Optional* List of file parts to read; supports a comma-separated list of files, file part ranges, or a combination of both.\n"
+    "- **fileParts** *Optional* List of file parts to read; supports a comma-separated list of files, file part ranges, or a combination of both.\n",
     "\n",
     "---\n",
     "## Troubleshooting:\n",
