HPCC4J-769 Spark-HPCC document parallel file transfer
- Added documentation on how to do parallel file transfers with Spark

Signed-off-by: James McMullan James.McMullan@lexisnexis.com

--- a/spark-hpcc/Examples/PySparkExample.ipynb
+++ b/spark-hpcc/Examples/PySparkExample.ipynb
@@ -305,6 +305,53 @@
     "    # Note: Spark won't read a dataset until it is used, therefore the count needs to be part of the above SparkReadSpan\n",
     "    readDf.count()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "578514d3",
+   "metadata": {},
+   "source": [
+    "# Parallel File Transfer Example\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Using threads allows PySpark to launch multiple read/write jobs at the same time.\n",
+    "Spark handles each job independently inside the JVM, so Python threads don’t block each other. If your HPCC cluster and Spark cluster have available bandwidth and executor capacity, parallel jobs can significantly reduce total runtime—often turning three sequential 30-second transfers into one 30-second wall-clock operation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f47e6ddd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from concurrent.futures import ThreadPoolExecutor\n",
+    "\n",
+    "def read_and_write(dataset_path, out_path):\n",
+    "    # Read from HPCC\n",
+    "    df = spark.read.load(\n",
+    "        format=\"hpcc\",\n",
+    "        host=\"http://127.0.0.1:8010\",\n",
+    "        cluster=\"mythor\",\n",
+    "        path=dataset_path\n",
+    "    )\n",
+    "    # Write to Parquet\n",
+    "    df.write.mode(\"overwrite\").parquet(out_path)\n",
+    "\n",
+    "\n",
+    "datasets = [\n",
+    "    (\"spark::test::dataset1\", \"out/parq1\"),\n",
+    "    (\"spark::test::dataset2\", \"out/parq2\"),\n",
+    "    (\"spark::test::dataset3\", \"out/parq3\"),\n",
+    "]\n",
+    "\n",
+    "# Run the operations in parallel\n",
+    "with ThreadPoolExecutor(max_workers=3) as pool:\n",
+    "    futures = [pool.submit(read_and_write, ds, out) for ds, out in datasets]\n",
+    "    for f in futures:\n",
+    "        f.result()   # Wait for completion"
+   ]
   }
  ],
  "metadata": {
