HPCC4J-782 Document Spark Troubleshooting Tips
- Added an initial troubleshooting section to the Spark notebook

Signed-off-by: James McMullan James.McMullan@lexisnexis.com

--- a/spark-hpcc/Examples/PySparkExample.ipynb
+++ b/spark-hpcc/Examples/PySparkExample.ipynb
@@ -122,7 +122,7 @@
     "- **fileParts** *Optional* List of file parts to read; supports a comma-separated list of files, file part ranges, or a combination of both.\n",
     "\n",
     "---\n",
-    "## Troubleshooting:\n",
+    "## Troubleshooting Reads:\n",
     "- **Empty dataset**: This typically indicates that an error occured on one or more of the worker nodes during the read process, the worker logs should contain more information about the particular failure.\n"
    ]
   },
@@ -351,6 +351,28 @@
     "    futures = [pool.submit(read_and_write, ds, out) for ds, out in datasets]\n",
     "    for f in futures:\n",
     "        f.result()   # Wait for completion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4149a90",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# General Troubleshooting Tips\n",
+    "\n",
+    "---\n",
+    "\n",
+    "- **Issues with individual file parts:** Potential problems such as slow transfer speeds for a particular file part can be diagnosed by using the fileParts option during the read process to selectively read individual file parts and compare transfer speeds.\n",
+    "\n",
+    "```python\n",
+    "        readDf = spark.read.load(format=\"hpcc\",\n",
+    "                                host=\"http://127.0.0.1:8010\",\n",
+    "                                cluster=\"mythor\",\n",
+    "                                path=\"/spark/test/dataset\",\n",
+    "                                fileParts=\"13\")\n",
+    "```\n",
+    "- **Network Congestion:** Reading data between distributed clusters (Spark and HPCC) opens many concurrent TCP connections, which can overwhelm network links or gateways. On the receiving cluster, this appears as slow transfer speeds and file access timeouts; on the sending cluster, it shows up as large TCP send queues and dropped packets. To mitigate this, limit the number of concurrent Spark read tasks, either by reducing executor cores per job or by limiting the number of workers."
    ]
   }
  ],
